# FiniteStateMachines

./: .gitignore  .zenodo.json  FSM.py  README.md  pylintrc  pyproject.toml  setup.cfg
src/finite_state_machines/: combinatorial_fsm.py
